--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,7 @@ warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
 ignore_missing_imports = True
+
+
+[mypy-tests.*]
+ignore_errors = True
