--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -17,7 +17,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip pylint mypy pytest pytest-cov codecov vulture
+          python -m pip install --upgrade pip pylint mypy pytest pytest-cov codecov vulture 'boto3_stubs[dynamodb,application-autoscaling]'
+          python -m mypy_boto3
       - name: Install
         run: |
           python setup.py install
