--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -35,7 +35,4 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          rm -rf build *.egg-info dist/*
-          python setup.py build bdist_wheel
-          twine upload  --non-interactive dist/*
-          rm -rf build *.egg-info dist/*
+          ./scripts/release.sh
