--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -21,7 +21,7 @@ jobs:
           echo "GitHub ref ${GITHUB_REF}"
           VERSION=`echo "${GITHUB_REF}" | cut -f 3 -d "/" | cut -f 1 -d "-"`
           echo "##[set-output name=version;]$(echo ${VERSION})"
-      - name: Lint
+      - name: Lint and test
         run: |
           ./scripts/before_commit.sh
       - name: Bump version
