--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           PYTHON_VER=`python -V | grep -Po '\d+\.+\d+'`
           if [[ "$PYTHON_VER" == "3.8" ]]; then
-            pytest --cov-report term --cov mypy_boto3_builder
+            pytest --cov-report term --cov dynamo_query
             codecov
           fi
