--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ handsdown = "*"
 "boto3_stubs[dynamodb,application-autoscaling]" = "*"
 
 [packages]
-dynamo_query = {path = ".", editable = true}
+dynamoquery = {path = ".", editable = true}
 
 [requires]
 python_version = "3.7"
