--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,11 @@ mypy = "*"
 vulture = "*"
 handsdown = "*"
 "boto3_stubs[dynamodb,application-autoscaling]" = "*"
+twine = "*"
+wheel = "*"
 
 [packages]
-dynamoquery = {path = ".", editable = true}
+dynamoquery = {path = ".",editable = true}
 
 [requires]
 python_version = "3.7"
