--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -1,6 +1,9 @@
 name: Lint and test changes
 
-on: [release]
+on:
+  release:
+    types:
+      - published
 
 jobs:
   build:
@@ -33,7 +36,7 @@ jobs:
       - name: Bump version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_EMAIL: engineering@altitudenetworks.com
+          GITHUB_EMAIL: bot@altitudenetworks.com
           VERSION: ${{ steps.vars.outputs.version }}
         run: |
           ./scripts/bump_version.sh
