--- a/.github/workflows/on_push_coverage.yml
+++ b/.github/workflows/on_push_coverage.yml
@@ -1,4 +1,4 @@
-name: Lint and test changes
+name: Build and send coverage report
 
 on:
   push:
@@ -22,9 +22,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U handsdown
+      - name: Build coverage report
+        run: |
+          pytest --cov-report term --cov dynamo_query
       - name: Send coverage report
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
-          pytest --cov-report term --cov dynamo_query
           codecov
