--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -1,4 +1,4 @@
-name: Lint and test changes
+name: Build and push docs
 
 on:
   push:
@@ -17,10 +17,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U handsdown
-      - name: Update and push docs
+      - name: Build docs
         run: |
           bash ./scripts/docs.sh
-      - name: Push docs
+      - name: Push docs if changed
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_EMAIL: bot@altitudenetworks.com
