--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -1,4 +1,4 @@
-name: Build and push docs
+name: Update docs
 
 on:
   push:
@@ -18,11 +18,16 @@ jobs:
         run: |
           python -m pip install -U handsdown
       - name: Build docs
+        id: build
         run: |
           bash ./scripts/docs.sh
-      - name: Push docs if changed
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_EMAIL: bot@altitudenetworks.com
-        run: |
-          bash ./scripts/push_docs.sh
+          HAS_CHANGES=`git diff --stat | grep docs`
+          echo "${HAS_CHANGES}"
+          echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
+      - name: Create Pull Request
+        if: ${{ steps.build.outputs.has_changes }}
+        uses: peter-evans/create-pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: actions/update-docs-${{ GITHUB_REF }}
+          commit-message: Auto update docs
