Fix if condition

--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -26,7 +26,7 @@ jobs:
           echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
           echo "##[set-output name=branch_name;]$(echo actions/update-docs-${GITHUB_REF})"
       - name: Create Pull Request
-        if: job.steps.build.outputs.has_changes
+        if: steps.build.outputs.has_changes
         uses: peter-evans/create-pull-request@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
