--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build docs
         id: build
         run: |
-          ./scripts/docs.sh -d
+          ./scripts/docs.sh -d || true
           HAS_CHANGES=`git diff --stat | grep docs`
           echo "${HAS_CHANGES}"
           echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
