--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -18,26 +18,28 @@ jobs:
         run: |
           python -m pip install -U handsdown
       - name: Build docs
-        id: build
         run: |
           ./scripts/docs.sh -d
+      - name: Collect changes
+        id: vars
+        run: |
           HAS_CHANGES=`git diff --stat | grep docs`
           echo "Changes: ${HAS_CHANGES}"
           echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
           echo "##[set-output name=branch_name;]$(echo hotfix/update-docs-${GITHUB_SHA:0:6})"
       - name: Create Pull Request
         id: cpr
-        if: steps.build.outputs.has_changes
+        if: steps.vars.outputs.has_changes
         uses: peter-evans/create-pull-request@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ steps.build.outputs.branch_name }}
+          branch: ${{ steps.vars.outputs.branch_name }}
           commit-message: Auto update docs
           labels: docs, automated pr
           reviewers: vemel, amirkav
           title: "[Actions] Auto update docs"
           body: Auto-generated docs were updated to reflect latest changes.
       - name: Check outputs
-        if: steps.build.outputs.has_changes
+        if: steps.vars.outputs.has_changes
         run: |
           echo "Created a PR #${{ steps.cpr.outputs.pr_number }}"
