Rewrite collect changes

--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -25,7 +25,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git diff --stat
+          HAS_CHANGES=`git diff --stat | grep docs`
+          GITHUB_SHA_SHORT = echo "${GITHUB_SHA}" | cut -c -4
+          BRANCH_NAME="hotfix/update-docs-${GITHUB_SHA_SHORT}"
+          echo "HAS_CHANGES: ${HAS_CHANGES}"
+          echo "BRANCH_NAME: ${BRANCH_NAME}"
+          echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
+          echo "##[set-output name=branch_name;]$(echo ${BRANCH_NAME})"
       # - name: Create Pull Request
       #   id: cpr
       #   if: steps.changes.outputs.has_changes
