Fix error on empty grep output

--- a/.github/workflows/on_push_docs.yml
+++ b/.github/workflows/on_push_docs.yml
@@ -22,30 +22,26 @@ jobs:
           ./scripts/docs.sh -d
       - name: Collect changes
         run: |
-          echo "test"
-          git diff
-          echo "test"
-          HAS_CHANGES=`git diff --stat | grep docs`
-          echo "test"
+          HAS_CHANGES=`git diff --stat | grep docs || true`
           GITHUB_SHA_SHORT=`echo "${GITHUB_SHA}" | cut -c -4`
-          echo "test"
           BRANCH_NAME="hotfix/update-docs-${GITHUB_SHA_SHORT}"
-          echo "test"
           echo "HAS_CHANGES: ${HAS_CHANGES}"
           echo "BRANCH_NAME: ${BRANCH_NAME}"
-      # - name: Create Pull Request
-      #   id: cpr
-      #   if: steps.changes.outputs.has_changes
-      #   uses: peter-evans/create-pull-request@v2
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: ${{ steps.changes.outputs.branch_name }}
-      #     commit-message: Auto update docs
-      #     labels: docs, automated pr
-      #     reviewers: vemel, amirkav
-      #     title: "[Actions] Auto update docs"
-      #     body: Auto-generated docs were updated to reflect latest changes.
-      # - name: Check outputs
-      #   if: steps.changes.outputs.has_changes
-      #   run: |
-      #     echo "Created a PR #${{ steps.cpr.outputs.pr_number }}"
+          echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
+          echo "##[set-output name=branch_name;]$(echo ${BRANCH_NAME})"
+      - name: Create Pull Request
+        id: cpr
+        if: steps.changes.outputs.has_changes
+        uses: peter-evans/create-pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ steps.changes.outputs.branch_name }}
+          commit-message: Auto update docs
+          labels: docs, automated pr
+          reviewers: vemel, amirkav
+          title: "[Actions] Auto update docs"
+          body: Auto-generated docs were updated to reflect latest changes.
+      - name: Check outputs
+        if: steps.changes.outputs.has_changes
+        run: |
+          echo "Created a PR #${{ steps.cpr.outputs.pr_number }}"
