--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -39,10 +39,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ steps.vars.outputs.version }}
         run: |
-          HAS_CHANGES=`git diff --stat | grep version`
-          echo "Changes: ${HAS_CHANGES}"
+          HAS_CHANGES=`git diff --stat | grep version || true`
+          BRANCH_NAME="release/${VERSION}"
+          echo "HAS_CHANGES: ${HAS_CHANGES}"
+          echo "BRANCH_NAME: ${BRANCH_NAME}"
           echo "##[set-output name=has_changes;]$(echo ${HAS_CHANGES})"
-          echo "##[set-output name=branch_name;]$(echo release/${VERSION})"
+          echo "##[set-output name=branch_name;]$(echo ${BRANCH_NAME})"
       - name: Create Pull Request
         id: cpr
         if: steps.changes.outputs.has_changes
