--- a/.github/workflows/on_pr_merge.yml
+++ b/.github/workflows/on_pr_merge.yml
@@ -26,7 +26,7 @@ jobs:
             const match = message.match(/Merge pull request #(\d+)/)
             if (!match) {
               console.log('Not a PR commit, stopping')
-              return
+              return ''
             }
             const prNumber = match[1];
             console.log('prNumber', prNumber)
