Do not run code checks on docs update

--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -1,6 +1,12 @@
 name: Lint and test changes
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - "docs/**"
+      - "dynamo_query/version.txt"
+      - "CHANGELOG.md"
+      - "README.md"
 
 jobs:
   code-style:
