--- a/.coveragerc
+++ b/.coveragerc
@@ -1,2 +1,13 @@
 [run]
 omit = dynamo_query/types.py
+
+[report]
+exclude_lines =
+    if self.debug:
+    pragma: no cover
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    if TYPE_CHECKING:
+ignore_errors = True
+omit =
+    tests/*
