--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,7 @@ exclude_lines =
     raise NotImplementedError
     if __name__ == .__main__.:
     if TYPE_CHECKING:
+    @overload
 ignore_errors = True
 omit =
     tests/*
