--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 black==19.10b0
-boto3_stubs[dynamodb,application-autoscaling]==1.13.25.0
+boto3_stubs[dynamodb,application-autoscaling]==1.14.0.2
+boto3==1.14.0
 codecov
 handsdown
 mypy
