--- a/.github/workflows/on_pr_open.yml
+++ b/.github/workflows/on_pr_open.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get PR issue
-        uses: actions/github-script@0.9.0
+        uses: actions/github-script@v3
         id: issue
         with:
           script: |
@@ -22,7 +22,7 @@ jobs:
             console.log('issue', response.data)
             return response.data
       - name: Build labels
-        uses: actions/github-script@0.9.0
+        uses: actions/github-script@v3
         id: labels
         with:
           script: |
@@ -69,7 +69,7 @@ jobs:
             }
             return [...labels, 'patch']
       - name: Assign labels
-        uses: actions/github-script@0.9.0
+        uses: actions/github-script@v3
         with:
           script: |
             const labels = ${{ steps.labels.outputs.result }}
