--- a/.github/workflows/on_pr_open.yml
+++ b/.github/workflows/on_pr_open.yml
@@ -75,7 +75,7 @@ jobs:
             const labels = ${{ steps.labels.outputs.result }}
             console.log('Assigned labels', labels)
 
-            await github.issues.replaceLabels({
+            await github.issues.replaceAllLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
