--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -14,23 +14,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.9
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pip
-          key: 3.8-pip-${{ hashFiles('**/Pipfile.lock') }}
+          key: 3.9-pip-${{ hashFiles('**/Pipfile.lock') }}
           restore-keys: |
-            3.8-pip-
+            3.9-pip-
       - name: Install dependencies
         run: |
-          python -m pip install -U pip
-          python -m pip install -r requirements-dev.txt
-      - name: Install
-        run: |
-          python setup.py install
+          python -m pip install -U poetry pip wheel
+          python -m poetry config virtualenvs.create false
+          python -m poetry install -n
       - name: Lint
         run: |
           vulture dynamo_query vulture_whitelist.py
@@ -43,7 +41,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -58,11 +56,9 @@ jobs:
             ${{ matrix.python-version }}-pip-
       - name: Install dependencies
         run: |
-          python -m pip install -U pip
-          python -m pip install -r requirements-dev.txt
-      - name: Install
-        run: |
-          python setup.py install
+          python -m pip install -U poetry pip wheel
+          python -m poetry config virtualenvs.create false
+          python -m poetry install -n
       - name: Unit tests
         run: |
           pytest -m "not integration"
