Update dependencies, fix typing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ botocore = "*"
 codecov = "*"
 pytest = "*"
 pytest-cov = "*"
-pylint = "*"
+flake8 = "*"
 isort = "*"
 boto3 = "*"
-black = "==20.8b1"
+black = "*"
 mypy = "*"
 vulture = "*"
 handsdown = "*"
